[package]
name = "polygen_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_socketio = "0.4"
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
fastrand = "1.9"
parking_lot = "0.12"
ctrlc = { version = "3.2", features = ["termination"] }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
